# NN_Implementation

./: .gitignore  CMakeLists.txt  IDXimage.cpp  LICENSE.txt  README.md  build.ps1  build.sh  log-.txt  main.cpp  run_clang_format.sh
src/: .~lock.iris.csv#  CMakeLists.txt  IDXimage.cpp  error_logger.cpp  error_logger.h  errorlogger.cpp  errorlogger.h  font.cpp  font.h  main  main.cpp  matrix.cpp  matrix.h  neural_network.cpp  neural_network.h  neutral_network.cpp  nn.cpp  test.py
